--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,29 @@
 {
-    "name": "prose/coding-problem",
-    "description": "A coding problem for zedcore candidates",
-    "type": "project",
-    "require": {
-        "twig/twig": "^3.0",
-        "twbs/bootstrap": "^4.4"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^8.5"
-    },
-    "autoload": {
-        "psr-4": {
-            "Zedcore\\": "src"
-        }
-    },
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Patrick Rose",
-            "email": "prose@zedcore.com"
-        }
-    ]
+  "name": "prose/zedcore-coding-challenge",
+  "description": "A coding problem for zedcore candidates",
+  "type": "project",
+  "config": {
+    "platform": {
+      "php": "7.3"
+    }
+  },
+  "require": {
+    "twig/twig": "^3.0",
+    "twbs/bootstrap": "^4.4"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^8.5"
+  },
+  "autoload": {
+    "psr-4": {
+      "Zedcore\\": "src"
+    }
+  },
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Patrick Rose",
+      "email": "prose@zedcore.com"
+    }
+  ]
 }
